# zensical-zh-tw

./: .gitignore  AGENTS.md  GOD.base  README.md  Untitled.md  _url:  _url: []  issues.txt  llms-full.txt  llms.txt  main.py  pyproject.toml  requirements.txt  zensical.en.toml  zensical.toml
.obsidian/: app.json  appearance.json  bookmarks.json  community-plugins.json  core-plugins.json  graph.json  hotkeys.json  webviewer.json  workspace.json
.smtcmp_json_db/: .initial_migration_completed
archive/: 新增單一商品.md  新增電子票券.md  核銷電子票券.md  票券分潤自動結案.md  設定商品出貨通路.md  設定商品配送屬性.md  設定商品配送溫層跟物流（宅配貨到付款）.md  購買電子票券.md  配送通路設定.md  電子票券分票.md  電子票券對帳方法.md  電子票券退款.md
bases/: GOD.base  products moc.md
data/: paths.yml
docs/: .nav.yml  index 1.md  index.md  robots.txt
duckops/: firebase.md  index.md
includes/: abbreviations.md  abbreviations.zh-tw.md
overrides/: homepage.html  homepage_ec.html  main.html
reference/: OBD Path Glossary.csv  frontmatter-skill-reference.md  tolgee-exported.csv  trans-glossary.csv
scripts/: generate_llms_txt.py  mov2gif-command.rtf  ocr_md_update.py
site/: 404.html  index.html  search.json  sitemap.xml
temp/: 設定電子票券.md  電子票券分票.md
templages/: lucide-tag.md
templates/: bade-cyb-extensions-payments.zh-tw.md  badge-cyb-extensions-payments.md  badge-cyb-extensions.md  badge-difficulty.md  badge-features.md  badge-plans.md  badge-products.md  callout-abstract-form.md  callout-warnin-template-editing.md  code-annotation.md  doc-layout.md  explanation-layout.md  grid-cards-break.md  grid-cards-complex.md  grid-cards-next-steps.md  grid-cards.md  (+169 more)
(+3043 files in other folders)
