[project]
name = "zensical-zh-tw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.1",
    "mkdocs-autorefs>=1.4.4",
    "pandas>=3.0.3",
    "tabulate>=0.10.0",
    "zensical>=0.0.42",
]
